2005-07-26  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>

	* src/sitepage.cpp:
	Adjust the user interface and add a checkbox for double-byte detection.

	* src/appconfig.cpp:
	Check default cols and rows of terminal screen and set them to proper 
	value if needed.  These values cannot be zero or they will cause the 
	arithmetic error - "divided by zero".

2005-07-25  Jim Huang  <jserv@kaffe.org>

	* plugin/src/nsScriptablePeer.cpp (nsScriptablePeer::QueryOnExit):
	Implemented.

	* plugin/src/Makefile.am: Put $(LDFLAGS) with pcmanx-plugin.so
	generation.

	* data/sitelist: Updated.

2005-07-25  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>

	* src/view/telnetcon.cpp,
	src/pcmanx_pure_gtk2.cpp,
	src/mainframe.cpp:
	Completely rewrite the multi-threading DNS lookup.
	Remove all implementation based on GThreadPool.
	No more deadlock or strange blocking.
	Use IO channel to monitor socket connection instead of blocking calls.
	Due to better handling of multi-threading, the performance is improved.

	* src/sitepage.cpp:
	Prevent the user from accidentally creating a new favorite item without 
	name or URL.

	* src/appconfig.cpp:
	Fix the problem which previously disable the usage of space character in 
	the names of sites.

2005-07-24  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>

	* src/core/termdata.cpp:
	Correctly process Esc[A, Esc[B, Esc[C, Esc[D ANSI escape sequence.

	* src/view/telnetview.cpp,
	src/core/site.cpp,
	src/view/telnetcon.cpp:
	Add m_DetectDBChar to let users turn off double-byte detection.

	* src/appconfig.cpp:
	Set file permission of ~/.pcmanx/favorites to 0666 to prevent
	other users from access it.

	* plugin/src/plugin.cpp,
	plugin/src/plugin.h,
	plugin/src/pcmanx_interface.idl:
	Add some experimental code to test xpcom, but the test was failed.

2005-07-24  Jim Huang  <jserv@kaffe.org>

	* src/autologinpage.cpp (CAutoLoginPage::CAutoLoginPage): Fix typo.

	* po/pcmanx.pot,
	po/POTFILES.in,
	po/zh_TW.po: Updated.
